# SuazDct

./: .gitignore  README.md  build-android.py  dev-android.py  index.html  package.json  pnpm-lock.yaml  release-build-android.py  release-build-win.py
scripts/: sync-version.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: crypto.rs  format.rs  mod.rs  window.rs
src-tauri/src/utils/: chinese.rs  cipher_format.rs  mod.rs
src/assets/styles/: base.css  variables.css
src/components/: AppHeader.vue  BottomNav.vue  SentencePage.vue  SettingsMenu.vue  SinglePage.vue  ToastFeedback.vue
src/composables/: useClipboard.ts  useHistory.ts  useKeyboardOffset.ts  useSettings.ts  useToast.ts
src/types/: index.ts
src/utils/: cipher.ts  window.ts
