[package]
name = "suazdct"
version = "0.1.1"
authors = [ "Entlst" ]
edition = "2021"

[lib]
name = "suazdct_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies.tauri-build]
version = "2"
features = [ ]

[dependencies]
tauri-plugin-opener = "2"
serde_json = "1"
uniaz = "0.1.3"
hanconv = "0.5"

  [dependencies.tauri]
  version = "2"
  features = [ ]

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]
